--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                     <img src="logo.png" alt="logo" class = "home-img" width="60" height="60">
                 </a>
             </div>
+            <div id = "nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <!-- <li><a href="about.html">About</a></li> -->
+                </ul>
+            </div>
             <div class = "math">
                 <h4 class = "problem" id = "problem"></h4>
                 <form>
