--- a/index.html
+++ b/index.html
@@ -1,36 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel = "stylesheet "href = "styles.css"></script>
-        <title>Math Trainer</title>
-        <!--defer the script to ensure it is parsed and loads before the DOM is rendered
-        they will also execute in the process that they appear-->
-        <script src = "script.js"></script>
-    </head>
-    <body>
-        <div id = "root">
-            <div id = "logo">
-                <a href="index.html">
-                    <img src="logo.png" alt="logo" class = "home-img" width="60" height="60">
-                </a>
-            </div>
-            <div id = "nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <!-- <li><a href="about.html">About</a></li> -->
-                </ul>
-            </div>
-            <div class = "math">
-                <h4 class = "problem" id = "problem"></h4>
-                <form>
-                    <input type = "number" required placeholder="Enter the answer" id = "answer">
-                    <button onclick="return validateAnswer(answer.value)">Submit!</button>
-                    <button onclick="loadProblem()">Next Problem</button>
-                </form>
-            </div>
-        </div>
-    </body>
-</html>
+
+<head>
+    <title>Math Trainer</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class='nav-bar'>
+        <ul class='nav-links'>
+            <li><a href="#">Problems!</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Who was this made for?</a></li>
+        </ul>
+    </div>
+</body>
