added number generation, more css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+
+<body style="background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);">
     <div class='nav-bar'>
         <ul class='nav-links'>
-            <li><a href="#">Problems!</a></li>
+            <li><a href="problems.html">Problems!</a></li>
             <li><a href="#">About Me</a></li>
             <li><a href="#">Who was this made for?</a></li>
         </ul>
+    </div>
+    <div class='main'>
+        <h1 class='title'>
+            Hello there, my name is Rohith
+        </h1>
+        <h2>
+            I am a Physics student and a Web Developer, interested in spreading math education.
+        </h2>
     </div>
 </body>
